[feat] 마이페이지 개설한 스터디 조회
